Fully modularized, wrapped my brain around promises and after fighting realized that it could only return a single value on resolve, tucked all my variables into an object for use.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -170,6 +170,6 @@ a, .btn {
   border-right: none;
 }
 
-.song-section:last-of-type {
-  margin-bottom: 50px;
+.content {
+  padding-bottom: 50px;
 }
